# Parser-stihi.ru

./: README.md  main.py  pyproject.toml  stihi.txt
